--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -555,10 +555,7 @@
                 <i class="fas fa-users-cog"></i>
                 <span>Applications</span>
             </div>
-            <div class="nav-item">
-                <i class="fas fa-sign-out-alt"></i>
-                <span>Logout</span>
-            </div>
+             
              
         </div>
         
@@ -568,7 +565,7 @@
                 <h1 class="dashboard-title">Talent War Room</h1>
                 <div class="dashboard-actions">
                     <button class="btn btn-outline">
-                         <a class="btn " href="{% url 'login' %}">Login</a>   
+                         <a class="btn " href="{% url 'logout' %}">Logout</a>   
                     </button>
                     <button class="btn btn-primary">
                         <i class="fas fa-bolt"></i> Post a JOb
