--- a/Student_Jobsite/Pages/templates/Staff/base.html
+++ b/Student_Jobsite/Pages/templates/Staff/base.html
@@ -545,11 +545,11 @@
             </div>
             <div class="nav-item">
                 <i class="fas fa-wifi"></i>
-                <span>Post Job</span>
+                <span>Jobs</span>
             </div>
             <div class="nav-item">
-                <i class="fas fa-chess-king"></i>
-                <span>My Jobs</span>
+                <i class="fas fa-file-alt"></i>
+                <span>Applications</span>
             </div>
             <div class="nav-item">
                 <i class="fas fa-users-cog"></i>
@@ -568,10 +568,10 @@
                 <h1 class="dashboard-title">Talent War Room</h1>
                 <div class="dashboard-actions">
                     <button class="btn btn-outline">
-                         <a class="btn " href="{% url 'login' %}">Login</a>   
+                         <a class="btn " href="#">Logout</a>   
                     </button>
                     <button class="btn btn-primary">
-                        <i class="fas fa-bolt"></i> Post a JOb
+                        <i class="fas fa-bolt"></i> Job Search
                     </button>
                 </div>
             </div>
