--- a/Student_Jobsite/Pages/templates/Staff/base.html
+++ b/Student_Jobsite/Pages/templates/Staff/base.html
@@ -568,7 +568,7 @@
                 <h1 class="dashboard-title">Talent War Room</h1>
                 <div class="dashboard-actions">
                     <button class="btn btn-outline">
-                         <a class="btn " href="#">Logout</a>   
+                         <a class="btn " href="{% url 'logout' %}">Logout</a>   
                     </button>
                     <button class="btn btn-primary">
                         <i class="fas fa-bolt"></i> Job Search
