--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.0.18/dist/index.min.js"></script>
+    {% load static %}
     <style>
         :root {
             --primary: #0a0a0a;
@@ -571,11 +572,7 @@
                     <i class="fas fa-chess-king"></i>
                     <span>My Jobs</span>
                 </a>
-
-                <a href="/applications/" class="nav-link">
-                    <i class="fas fa-users-cog"></i>
-                    <span>Applications</span>
-                </a>
+  
             </nav>
         </div>
 
