--- a/Student_Jobsite/Pages/templates/apply.html
+++ b/Student_Jobsite/Pages/templates/apply.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'staff/base.html' %}
 {% block content %}
 <div class="container mt-4">
     <h2>Apply to: {{ job.title }}</h2>
