--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.0.18/dist/index.min.js"></script>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'main.css' %}">
     <style>
         :root {
             --primary: #0a0a0a;
@@ -573,6 +574,7 @@
                     <span>My Jobs</span>
                 </a>
   
+           
             </nav>
         </div>
 
