--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -559,7 +559,7 @@
             </div>
 
             <nav class="nav-menu">
-                <a href="{% url 'employer_dashboard' %}" class="nav-link active">
+                <a href="{% url 'employer_dashboard' %}" class="nav-link  ">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
                 </a>
@@ -725,5 +725,7 @@
             });
         });
     </script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
