Database settings Update

--- a/Student_Jobsite/Pages/templates/job_list.html
+++ b/Student_Jobsite/Pages/templates/job_list.html
@@ -90,6 +90,7 @@
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">{{ job.title }}</h5>
+                        <p class="card-text">{{ job.amount}}</p> 
                         <p class="card-text">{{ job.description|truncatewords:20 }}</p>
                         <p class="strongloc"><strong>Location:</strong> {{ job.location }}</p>
                         <a href="{% url 'apply_to_job' job.id %}" class="btn btn-primary">Apply</a>
