--- a/Student_Jobsite/Pages/templates/post_job.html
+++ b/Student_Jobsite/Pages/templates/post_job.html
@@ -16,7 +16,10 @@
             {{ form.description }}
             {{ form.description.errors }}
         </div>
-        
+        <div class="form-group">
+            <label class="form-label">{{ form.amount.label }}</label>
+            {{ form.amount }}
+            {{ form.amount.errors }}
         <div class="form-group">
             <label class="form-label">{{ form.requirements.label }}</label>
             {{ form.requirements }}
